# preparation

./: CMakeLists.txt  README.md  main.cpp
Find_Pivot_Index/: Solution.cpp  Solution.h  main.cpp  main.h
Is_Subsequence/: Solution.cpp  Solution.h  main.cpp  main.h
Isomorphic_Strings/: Solution.cpp  Solution.h  main.cpp  main.h
Longest Common Prefix/: Solution.cpp  Solution.h  main.cpp
Longest_Common_Prefix/: Solution.cpp  Solution.h  main.cpp  main.h
Roman_to_Int/: Solution.cpp  Solution.h  main.cpp  main.h
Running_Sum/: Solution.cpp  Solution.h  main.cpp  main.h
Templates/: SolutionHeader.vm  mainCpp.vm  mainHeader.vm
romanToInt/: Solution.cpp  Solution.h  main.cpp
