cmake_minimum_required(VERSION 3.23.2)
project(preparation)

set(CMAKE_CXX_STANDARD 17)

add_executable(preparation main.cpp Longest_Common_Prefix/Solution.cpp Roman_to_Int/Solution.cpp Roman_to_Int/main.cpp Longest_Common_Prefix/main.cpp Running_Sum/Solution.cpp Running_Sum/main.cpp Find_Pivot_Index/Solution.cpp Find_Pivot_Index/main.cpp Isomorphic_Strings/main.cpp Isomorphic_Strings/Solution.cpp Is_Subsequence/main.cpp Is_Subsequence/Solution.cpp)
